--- a/src/Pages/NewPost/NewPost.css
+++ b/src/Pages/NewPost/NewPost.css
@@ -31,3 +31,18 @@
     padding: 10px 40px;
     border-radius: 7px;
 }
+
+@media only screen and (max-width: 900px) {
+
+    .newpost{
+        margin: 30px 50px;
+        padding: 20px 30px;
+        background-color: rgb(75, 75, 75);
+        text-align: left;
+        color: white;
+        text-transform: uppercase;
+        font-weight: bold;
+    }
+
+
+}
